Refactor: SecurityConfig 설정 간소화 및 불필요한 핸들러 제거
- SecurityConfig에서 CustomLogoutSuccessHandler 제거하여 설정 간소화
- 불필요한 SecurityFilterChain 구성 요소 제거 및 httpBasic 인증 설정을 비활성화로 변경
- CORS 설정을 단순화하여 허용되는 Origin과 Method를 명확하게 정의
- 사용하지 않는 커스텀 핸들러를 삭제하고 보안 구성의 가독성 향상
- Logout 설정 제거로 인한 관련 로직 정리 및 불필요한 의존성 제거